Fixed reviews and ratings for  dark mode

--- a/src/styles/Reviews.css
+++ b/src/styles/Reviews.css
@@ -102,6 +102,7 @@
   background-color: #e0e0e0;
   width: min-content;
   border-radius: 50%;
+  color: black; /* Added */
 }
 
 .back-icon:hover {
@@ -124,4 +125,6 @@
   margin-block: 32px;
 }
 
-/* range */
+body, p, h1 {
+  color: black;
+}
